--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,33 @@
+
 .container {
-  padding: 0 2rem;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0.5em;
 }
 
+.button {
+  font-size: 1.1em;
+  background: #285b95;
+  padding:8px;
+  color:white;
+  outline: none;
+  margin:5px;
+  /* width: 15rem; */
+  border-radius: 5px;
+}
+
+.labels {
+  color:rgb(107, 113, 120);
+  font-size:1.2em;
+}
+.title {
+  background-color:#2b9b40;
+}
+.labels2 {
+ color: #2b9b40;
+ font-size:1.2em;
+}
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -12,6 +38,17 @@
   align-items: center;
 }
 
+.spinning {
+  animation: rotation 1s infinite linear;
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
 .footer {
   display: flex;
   flex: 1;
